fix: turn verify-email into get
